// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Runtime format Note model definition with views 1`] = `
{
  "accountData": {
    "noteBookList": {
      "name": "NoteBook",
      "type": "connection",
    },
    "noteList": {
      "name": "Note",
      "type": "connection",
    },
  },
  "enums": {
    "NoteStatus": [
      "DEFAULT",
      "IMPORTANT",
      "ARCHIVE",
    ],
  },
  "models": {
    "Note": {
      "accountRelation": {
        "type": "list",
      },
      "id": "NoteID",
      "implements": [],
      "interface": false,
    },
    "NoteBook": {
      "accountRelation": {
        "type": "list",
      },
      "id": "NoteBookID",
      "implements": [],
      "interface": false,
    },
  },
  "objects": {
    "Note": {
      "author": {
        "type": "view",
        "viewType": "documentAccount",
      },
      "noteBook": {
        "relation": {
          "model": "NoteBookID",
          "property": "noteBookID",
          "source": "document",
        },
        "type": "view",
        "viewType": "relation",
      },
      "noteBookID": {
        "required": false,
        "type": "streamid",
      },
      "status": {
        "refName": "NoteStatus",
        "refType": "enum",
        "required": false,
        "type": "reference",
      },
      "text": {
        "required": true,
        "type": "string",
      },
      "title": {
        "indexed": true,
        "required": true,
        "type": "string",
      },
      "version": {
        "type": "view",
        "viewType": "documentVersion",
      },
    },
    "NoteBook": {
      "author": {
        "type": "view",
        "viewType": "documentAccount",
      },
      "notes": {
        "relation": {
          "model": "NoteID",
          "property": "noteBookID",
          "source": "queryConnection",
        },
        "type": "view",
        "viewType": "relation",
      },
      "notesCount": {
        "relation": {
          "model": "NoteID",
          "property": "noteBookID",
          "source": "queryCount",
        },
        "type": "view",
        "viewType": "relation",
      },
      "title": {
        "indexed": true,
        "required": true,
        "type": "string",
      },
      "version": {
        "type": "view",
        "viewType": "documentVersion",
      },
    },
  },
}
`;

exports[`Runtime format Post with comments relations 1`] = `
{
  "accountData": {
    "commentList": {
      "name": "Comment",
      "type": "connection",
    },
    "postList": {
      "name": "Post",
      "type": "connection",
    },
  },
  "enums": {},
  "models": {
    "Comment": {
      "accountRelation": {
        "type": "list",
      },
      "id": "CommentID",
      "implements": [],
      "interface": false,
    },
    "Post": {
      "accountRelation": {
        "type": "list",
      },
      "id": "PostID",
      "implements": [],
      "interface": false,
    },
  },
  "objects": {
    "Comment": {
      "author": {
        "type": "view",
        "viewType": "documentAccount",
      },
      "post": {
        "relation": {
          "model": "PostID",
          "property": "postID",
          "source": "document",
        },
        "type": "view",
        "viewType": "relation",
      },
      "postID": {
        "required": true,
        "type": "streamid",
      },
      "text": {
        "indexed": true,
        "required": true,
        "type": "string",
      },
      "version": {
        "type": "view",
        "viewType": "documentVersion",
      },
    },
    "Post": {
      "author": {
        "type": "view",
        "viewType": "documentAccount",
      },
      "comments": {
        "relation": {
          "model": "CommentID",
          "property": "postID",
          "source": "queryConnection",
        },
        "type": "view",
        "viewType": "relation",
      },
      "commentsCount": {
        "relation": {
          "model": "CommentID",
          "property": "postID",
          "source": "queryCount",
        },
        "type": "view",
        "viewType": "relation",
      },
      "date": {
        "required": false,
        "type": "datetime",
      },
      "text": {
        "required": true,
        "type": "string",
      },
      "title": {
        "indexed": true,
        "required": true,
        "type": "string",
      },
      "version": {
        "type": "view",
        "viewType": "documentVersion",
      },
    },
  },
}
`;

exports[`Runtime format Profile - multiples models with common local references 1`] = `
{
  "accountData": {
    "genericProfile": {
      "name": "GenericProfile",
      "type": "node",
    },
    "personProfile": {
      "name": "PersonProfile",
      "type": "node",
    },
    "socialProfile": {
      "name": "SocialProfile",
      "type": "node",
    },
  },
  "enums": {},
  "models": {
    "GenericProfile": {
      "accountRelation": {
        "type": "single",
      },
      "id": "GenericProfileID",
      "implements": [],
      "interface": false,
    },
    "PersonProfile": {
      "accountRelation": {
        "type": "single",
      },
      "id": "PersonProfileID",
      "implements": [],
      "interface": false,
    },
    "SocialProfile": {
      "accountRelation": {
        "type": "single",
      },
      "id": "SocialProfileID",
      "implements": [],
      "interface": false,
    },
  },
  "objects": {
    "GenericProfile": {
      "image": {
        "refName": "ImageSources",
        "refType": "object",
        "required": false,
        "type": "reference",
      },
      "name": {
        "indexed": true,
        "required": false,
        "type": "string",
      },
    },
    "ImageMetadata": {
      "height": {
        "required": true,
        "type": "integer",
      },
      "mimeType": {
        "required": true,
        "type": "string",
      },
      "size": {
        "required": false,
        "type": "integer",
      },
      "src": {
        "required": true,
        "type": "string",
      },
      "width": {
        "required": true,
        "type": "integer",
      },
    },
    "ImageSources": {
      "alternatives": {
        "item": {
          "refName": "ImageMetadata",
          "refType": "object",
          "required": false,
          "type": "reference",
        },
        "required": false,
        "type": "list",
      },
      "original": {
        "refName": "ImageMetadata",
        "refType": "object",
        "required": true,
        "type": "reference",
      },
    },
    "PersonProfile": {
      "affiliations": {
        "item": {
          "required": false,
          "type": "string",
        },
        "required": false,
        "type": "list",
      },
      "birthDate": {
        "required": false,
        "type": "date",
      },
      "gender": {
        "required": false,
        "type": "string",
      },
      "homeLocation": {
        "required": false,
        "type": "string",
      },
      "nationalities": {
        "item": {
          "required": false,
          "type": "countrycode",
        },
        "required": false,
        "type": "list",
      },
      "residenceCountry": {
        "indexed": true,
        "required": false,
        "type": "countrycode",
      },
    },
    "SocialProfile": {
      "background": {
        "refName": "ImageSources",
        "refType": "object",
        "required": false,
        "type": "reference",
      },
      "description": {
        "required": false,
        "type": "string",
      },
      "emoji": {
        "required": false,
        "type": "string",
      },
      "url": {
        "indexed": true,
        "required": false,
        "type": "string",
      },
    },
  },
}
`;

exports[`Runtime format Profile definition with added model view 1`] = `
{
  "accountData": {
    "genericProfile": {
      "name": "GenericProfile",
      "type": "node",
    },
    "personProfile": {
      "name": "PersonProfile",
      "type": "node",
    },
    "socialProfile": {
      "name": "SocialProfile",
      "type": "node",
    },
  },
  "enums": {},
  "models": {
    "GenericProfile": {
      "accountRelation": {
        "type": "single",
      },
      "id": "GenericProfileID",
      "implements": [],
      "interface": false,
    },
    "PersonProfile": {
      "accountRelation": {
        "type": "single",
      },
      "id": "PersonProfileID",
      "implements": [],
      "interface": false,
    },
    "SocialProfile": {
      "accountRelation": {
        "type": "single",
      },
      "id": "SocialProfileID",
      "implements": [],
      "interface": false,
    },
  },
  "objects": {
    "GenericProfile": {
      "image": {
        "refName": "ImageSources",
        "refType": "object",
        "required": false,
        "type": "reference",
      },
      "name": {
        "indexed": true,
        "required": false,
        "type": "string",
      },
      "version": {
        "type": "view",
        "viewType": "documentVersion",
      },
    },
    "ImageMetadata": {
      "height": {
        "required": true,
        "type": "integer",
      },
      "mimeType": {
        "required": true,
        "type": "string",
      },
      "size": {
        "required": false,
        "type": "integer",
      },
      "src": {
        "required": true,
        "type": "string",
      },
      "width": {
        "required": true,
        "type": "integer",
      },
    },
    "ImageSources": {
      "alternatives": {
        "item": {
          "refName": "ImageMetadata",
          "refType": "object",
          "required": false,
          "type": "reference",
        },
        "required": false,
        "type": "list",
      },
      "original": {
        "refName": "ImageMetadata",
        "refType": "object",
        "required": true,
        "type": "reference",
      },
    },
    "PersonProfile": {
      "affiliations": {
        "item": {
          "required": false,
          "type": "string",
        },
        "required": false,
        "type": "list",
      },
      "birthDate": {
        "required": false,
        "type": "date",
      },
      "gender": {
        "required": false,
        "type": "string",
      },
      "homeLocation": {
        "required": false,
        "type": "string",
      },
      "nationalities": {
        "item": {
          "required": false,
          "type": "countrycode",
        },
        "required": false,
        "type": "list",
      },
      "residenceCountry": {
        "indexed": true,
        "required": false,
        "type": "countrycode",
      },
    },
    "SocialProfile": {
      "background": {
        "refName": "ImageSources",
        "refType": "object",
        "required": false,
        "type": "reference",
      },
      "description": {
        "required": false,
        "type": "string",
      },
      "emoji": {
        "required": false,
        "type": "string",
      },
      "url": {
        "indexed": true,
        "required": false,
        "type": "string",
      },
    },
  },
}
`;

exports[`Runtime format Social with account reference 1`] = `
{
  "accountData": {
    "otherOfPersonMetList": {
      "name": "PersonMet",
      "property": "other",
      "type": "account",
    },
    "personMetList": {
      "name": "PersonMet",
      "type": "connection",
    },
  },
  "enums": {},
  "models": {
    "PersonMet": {
      "accountRelation": {
        "type": "list",
      },
      "id": "PersonMetID",
      "implements": [],
      "interface": false,
    },
  },
  "objects": {
    "PersonMet": {
      "date": {
        "indexed": true,
        "required": false,
        "type": "date",
      },
      "other": {
        "required": true,
        "type": "did",
      },
      "self": {
        "type": "view",
        "viewType": "documentAccount",
      },
    },
  },
}
`;
